--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+.container{
+  display: flex;
 }
 
 .sidebar {
@@ -20,8 +25,10 @@ body {
 
 
 
+
 .sidebar:hover {
   width: 200px;
+ 
 }
 
 .nav-item {
@@ -35,7 +42,8 @@ body {
 }
 
 .nav-item:hover {
-  background-color: #555;
+  background-color: black;
+
 }
 
 .icon {
@@ -56,3 +64,126 @@ body {
   margin-top: auto; 
 }
 
+.display
+{
+  width: 100%;
+  background-color: #555;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  padding: 20px;
+  width: 100%;
+}
+
+/* Sections */
+
+/* Notes */
+
+
+.notes {
+  display: grid;
+  grid-template-columns: 20% auto 10% 3% 10%;
+
+  gap: 10px;
+  overflow: hidden;
+
+}
+
+.taskTitle, .taskDescription ,.taskImportance  ,.task-item {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  }
+
+
+  .tasklist {
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: min-content;
+  grid-row-gap: .5em;
+  grid-column-gap: 1em;; 
+    overflow: hidden;
+    padding: 10px; 
+    box-sizing: border-box; 
+    max-height: 80vh; 
+    height: 100%; 
+  
+  }
+
+  .task-item {
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    background-color: #fff; 
+    box-sizing: border-box; 
+  }
+
+.taskDescription{
+  resize: none;
+  border-radius: 4px;
+}
+
+.addTask {
+  padding: 10px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: auto;
+}
+
+.addTask:hover {
+  background-color: #218838;
+}
+
+.task-color {
+  height: 100%; 
+  border-radius: 4px;
+  padding: 5px; 
+  cursor: pointer; 
+}
+
+.deleteTask {
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+
+.deleteTask:hover {
+  background-color: #c82333;
+}
+
+/* Reminder */
+
+.about{
+
+}
+
+.archive{
+
+}
+
+.bin{
+ 
+}
+
+.notes{
+}
+
+.reminder{
+
+}
+
+.visible-element {
+  display: block; 
+}
+
+.hidden-element {
+  display: none;
+}
